[gd_scene load_steps=5 format=3 uid="uid://c1eupvu3tdir1"]

[ext_resource type="Script" path="res://pushable.gd" id="1_3mtka"]
[ext_resource type="Texture2D" uid="uid://bntgau82j1wan" path="res://box.png" id="2_3v1ys"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_igu8q"]
size = Vector2(96, 96)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5smy3"]
size = Vector2(58, 96)

[node name="Node2D" type="CharacterBody2D" node_paths=PackedStringArray("pushingArea")]
script = ExtResource("1_3mtka")
pushingArea = NodePath("Area2D")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_igu8q")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-29, 0)
shape = SubResource("RectangleShape2D_5smy3")

[node name="Area2D2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2(29, 0)
shape = SubResource("RectangleShape2D_5smy3")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_3v1ys")

[connection signal="body_shape_entered" from="Area2D" to="." method="_on_area_2d_body_shape_entered"]
[connection signal="body_shape_exited" from="Area2D" to="." method="_on_area_2d_2_body_shape_exited"]
[connection signal="body_shape_entered" from="Area2D2" to="." method="_on_area_2d_2_body_shape_entered"]
[connection signal="body_shape_exited" from="Area2D2" to="." method="_on_area_2d_2_body_shape_exited"]
